--- a/writing/journal-intime.html
+++ b/writing/journal-intime.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HWWNGB65K"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4HHM3J3D"></script>
 
 
   <title>Dami Kim</title>
