--- a/artwork.html
+++ b/artwork.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HWWNGB65K"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4HHM3J3D"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dami Kim</title>
