--- a/artwork.html
+++ b/artwork.html
@@ -3,7 +3,13 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4HHM3J3D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-2G4HHM3J3D');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dami Kim</title>
 
