--- a/artwork/in-front-of-the-mirror.html
+++ b/artwork/in-front-of-the-mirror.html
@@ -35,7 +35,7 @@
     <!-- Image header -->
     <div class="w3-display-container w3-container">
         <div style="position:relative; width:70%"><img class="card" src="/images/Mirror_2018_1_1_small.jpg" alt="mirror" style="width:100%">
-            <span class="font-12" style="position:absolute; bottom:0; right:-93px; z-index:3; vertical-align: bottom; padding-bottom:12px; padding-left: 3.5px;">© Sara Krauskopf</span>
+            <span class="font-12" style="position:absolute; bottom:0; right:-93px; vertical-align: bottom; padding-bottom:12px; padding-left: 3.5px;">© Sara Krauskopf</span>
         </div>
         <img class="card" src="/images/Mirror_2018_3.jpg" alt="mirror" style="width:70%">
         <img class="card" src="/images/Mirror_2018_2_noise.jpg" alt="mirror" style="width:70%">
