--- a/nav.html
+++ b/nav.html
@@ -8,9 +8,9 @@
         <h3 class="w3-wide"><a href="/index.html">Dami Kim</a></h3>
     </div>
     <div class="w3-padding-64 w3-large" style="margin-top:18px;">
-        <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio</a>
+        <a href="/studio/intro.html" class="w3-bar-item w3-button">2023- Transdisciplinary Studio</a>
         <div style="height:16px;"></div>
-        <a href="#" class="w3-bar-item w3-button">2022-</a>
+<!--         <a href="#" class="w3-bar-item w3-button">2022-</a> -->
         <a href="/exhibition/eros-as-a-modern-punishment.html" class="w3-bar-item w3-button">2021</a>
         <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align" id="myBtn">
         2017-2020 <i class="fa fa-caret-down"></i>
