--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         <h3 class="w3-wide"><a href="/index.html">Dami Kim</a></h3>
     </div>
     <div class="w3-padding-64 w3-large" style="margin-top:18px;">
-        <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio &nbsp;2023-</a>
+        <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio 2023-</a>
         <div style="height:16px;"></div>
 <!--         <a href="#" class="w3-bar-item w3-button">2022-</a> -->
         <a href="/exhibition/eros-as-a-modern-punishment.html" class="w3-bar-item w3-button">2021</a>
