--- a/studio/intro.html
+++ b/studio/intro.html
@@ -35,9 +35,9 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Mar 2023<br>
             Art Direction for Metaverse Web/App <i>Social Walk</i><br>
-            Commissioned by Social Decanting </p>
+            Commissioned by Social Decanting<br>
+            2023</p>
     </div>
     <!-- Image header -->
     <div class="w3-display-container w3-container">
