--- a/exhibition/eros-as-a-modern-punishment.html
+++ b/exhibition/eros-as-a-modern-punishment.html
@@ -42,39 +42,50 @@
             <br><a href="https://www.moderneros.live" style="text-decoration: none;">www.moderneros.live</a>, Geumnarae Art Hall et al
             <br>Due to COVID-19, small audiences could watch the performances on site, and the performance videos were live-streamed on the web.
             <br><br>
-            <strong>Team&Credit</strong><br>
-ACT I<span style="color:white;">,,-</span>
-Music,
-Do Hyung Kim.
-Stage Production,
-Sujin Lee.
-Stage Assistants,
-Sujin Oh,
-Jinhee Park.
-Camera,
-Ye-seul Ahn.
-Partner,
-GCFAC.<br>
-ACT II<span style="color:white;">,,</span>
-Costume,
-Chloë Dickinson.<br>
-ACT III<span style="color:white;">.</span>
-Stage Assistant,
-Jeawon Kim.
-Camera,
-Katharina Weishäupl.
-Partner,
-Horanggasy Creative
-Studio.<br>
-WEB<span style="color:white;">..--</span>
-Design,
-Min Kyung Lee.
-Developer,
-Eunah Jung.
-Transmission (Advice),
-Seung Joon Lee.
-Translation (Advice),
-Kyrie Vermette.</p>
+            <table id="eros-list">
+                <tr><strong>Team&Credit</strong></tr>
+                <tr>
+                  <td style="width: 4.5vw;">ACT I</td>
+                  <td>Music,
+                    Do Hyung Kim.
+                    Stage Production,
+                    Sujin Lee.
+                    Stage Assistants,
+                    Sujin Oh,
+                    Jinhee Park.
+                    Camera,
+                    Ye-seul Ahn.
+                    Partner,
+                    GCFAC.</td>
+                </tr>
+                <tr>
+                    <td>ACT II</td>
+                    <td>Costume,
+                        Chloë Dickinson.</td>
+                  </tr>
+                  <tr>
+                    <td>ACT III</td>
+                    <td>Stage Assistant,
+                        Jeawon Kim.
+                        Camera,
+                        Katharina Weishäupl.
+                        Partner,
+                        Horanggasy Creative
+                        Studio.</td>
+                  </tr>
+                  <tr>
+                    <td>Web</td>
+                    <td>Design,
+                        Min Kyung Lee.
+                        Developer,
+                        Eunah Jung.
+                        Transmission (Advice),
+                        Seung Joon Lee.
+                        Translation (Advice),
+                        Kyrie Vermette.</td>
+                  </tr>
+              </table>
+            <br>
             <div style="padding-bottom:56.25%;">
                 <iframe width="97%" height="75%" style="position:absolute;" src="https://www.youtube.com/embed/FwhAW12mq8k?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
