--- a/biography.html
+++ b/biography.html
@@ -61,7 +61,7 @@
       <td>Lives and works in Paris, France</td>
     </tr>
     <tr>
-      <td>2021-Present	</td>
+      <td>2021-Current	</td>
       <td>Lives and works in Seoul, South Korea</td>
     </tr>
   </table>
@@ -69,7 +69,7 @@
   
   <br><br>
   
-  <table>
+  <table id="bio-list">
     <tr><strong>Exhibition/Performance</strong></tr>
     <tr>
       <td style="width: 8vw;">2021</td>
@@ -100,7 +100,7 @@
   </table>
   <br>
   <br>
-  <table>
+  <table id="bio-list">
     <tr><strong>Commission/Residency</strong></tr>
     <tr>
       <td style="width: 8vw;">2023</td>
@@ -129,7 +129,7 @@
   </table>
   
   <br><br>
-  <table>
+  <table id="bio-list">
     <tr><strong>Talk/Publication</strong></tr>
     <tr>
       <td style="width: 8vw;">2020</td>
@@ -143,7 +143,7 @@
   </table>
   
   <br><br>
-  <table>
+  <table id="bio-list">
     <tr><strong>Laboratory Research</strong></tr>
     <tr>
       <td style="width: 8vw; vertical-align:top;">2015</td>
