--- a/artwork/in-front-of-the-mirror.html
+++ b/artwork/in-front-of-the-mirror.html
@@ -40,7 +40,7 @@
             <span class="font-12" style="position:absolute; bottom:0; right:-93px; vertical-align: bottom; padding-bottom:12px; padding-left: 3.5px;">© Sara Krauskopf</span>
         </div>
         <img class="card" src="/images/Mirror_2018_3.jpg" alt="mirror" style="width:70%">
-        <img class="card" src="/images/Mirror_2018_2_noise.jpg" alt="mirror" style="width:70%">
+<!--         <img class="card" src="/images/Mirror_2018_2_noise.jpg" alt="mirror" style="width:70%"> -->
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/316915758?h=b588350be4" width="840" height="420" frameborder="0"    allowfullscreen></iframe>
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
