--- a/artwork/in-front-of-the-mirror.html
+++ b/artwork/in-front-of-the-mirror.html
@@ -47,12 +47,11 @@
             <span class="font-12" style="position:absolute; bottom:0; right:-93px; vertical-align: bottom; padding-bottom:12px; padding-left: 3.5px;">© Sara Krauskopf</span>
         </div>
         <img class="card" src="/images/Mirror_2018_3.jpg" alt="mirror" style="width:70%">
-<!--         <img class="card" src="/images/Mirror_2018_2_noise.jpg" alt="mirror" style="width:70%"> -->
+<!--    <img class="card" src="/images/Mirror_2018_2_noise.jpg" alt="mirror" style="width:70%"> -->
         <div class="w3-display-container w3-container">
-        <iframe title="vimeo-player" src="https://player.vimeo.com/video/316915758?h=b588350be4&autoplay=0&loop=1&title=0&byline=0&portrait=0" width="100%" height="450" max-width="800" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            <iframe title="vimeo-player" style="position:absolute;" src="https://player.vimeo.com/video/316915758?h=b588350be4&autoplay=0&loop=1&title=0&byline=0&portrait=0" width="100%" height="450" max-width="800" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
-            <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
-    
+        <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
         </div>
     </div>
 
