--- a/artwork/unknown-time.html
+++ b/artwork/unknown-time.html
@@ -36,7 +36,7 @@
     <div class="w3-display-container w3-container">
         <img class="card" src="/images/Unknown_2017_2_screenshot.png" alt="mirror" style="width:70%">
         <img class="card" src="/images/Unknown_2017_1.jpg" alt="mirror" style="width:70%">
-        <img class="card" src="/images/Unknown_2017_3_screenshot.png" alt="mirror" style="width:30%">
+<!--         <img class="card" src="/images/Unknown_2017_3_screenshot.png" alt="mirror" style="width:30%"> -->
                <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
         </div>
