--- a/artwork/self.html
+++ b/artwork/self.html
@@ -37,21 +37,24 @@
 
      <!-- Product grid -->
      <div class="w3-row">
-        <div class="w3-col l3 s6" style="width:45%">
+        <div class="w3-col l3 s6" style="width:100%">
           <div class="w3-container text" style="padding-right:2.5px;">
-            <img class="card" src="/images/Self_3_crop_small.jpg" alt="mirror" style="width:100%; max-height:320px; padding-bottom:0px;">
+              <img src="/images/Self_1_lighter.jpg" alt="mirror" style="width:100%; max-height:320px; padding-bottom:0px;">
+              <img src="/images/Self_2.jpg" alt="mirror" style="width:100%; max-height:320px; padding-bottom:0px;">
+              
+<!--             <img class="card" src="/images/Self_3_crop_small.jpg" alt="mirror" style="width:100%; max-height:320px; padding-bottom:0px;">
             <img class="card" src="/images/Self_1_small.jpg" alt="mirror" style="width:100%; max-height:320px;">
-        </div>
+        </div> -->
         </div>
     
-        <div class="w3-col l3 s6" style="width:45%">
+<!--         <div class="w3-col l3 s6" style="width:45%">
             <div class="w3-container" style="padding-left:2.5px;">
               <div class="w3-display-container">
                 <img class="card" src="/images/Self_2_crop_small.jpg" alt="mirror" style="width:100%; max-height:320px; padding-bottom:0px;">
                 <img class="card" src="/images/Self_4_crop_small.jpg" alt="mirror" style="width:100%; max-height:320px;">  
             </div>
             </div>
-        </div>
+        </div> -->
         </div>
 
 
