--- a/artwork/line.html
+++ b/artwork/line.html
@@ -53,7 +53,7 @@
     </div>
     </div>
 
-    <div class="w3-col l3 s6">
+    <div class="w3-col l3 s6" style="margin: 0px;">
         <div class="w3-container" style="padding-left:6px;">
           <div class="w3-display-container">
              <p>
