--- a/nav.html
+++ b/nav.html
@@ -32,8 +32,8 @@
         <div style="height:16px;"></div>
 
         <a href="/biography.html" class="w3-bar-item w3-button">Biography</a>
- <div style="height:16px;"></div>
-         <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio 2023-</a>
+        <div style="height:16px;"></div>
+        <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio</a>
         <div style="height:16px;"></div>
         <a href="/contact.html" class="w3-bar-item w3-button">Contact</a>
      
