--- a/nav.html
+++ b/nav.html
@@ -10,9 +10,9 @@
     <div class="w3-padding-64 w3-large" style="margin-top:18px;">
        
         <!-- <a href="#" class="w3-bar-item w3-button">2022-</a> -->
-        <a href="/exhibition/eros-as-a-modern-punishment.html" class="w3-bar-item w3-button">2021</a>
+        <a href="/exhibition/eros-as-a-modern-punishment.html" class="w3-bar-item w3-button">Eros, as a Modern Punishment</a>
         <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align" id="myBtn">
-        2017-2020 <i class="fa fa-caret-down"></i>
+        Artwork <i class="fa fa-caret-down"></i>
         </a>
         <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
         <!-- <a href="#" class="w3-bar-item w3-button w3-light-grey"><i class="fa fa-caret-right w3-margin-right"></i>Skinny</a> -->
