--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,7 @@
         <!-- <a href="#" class="w3-bar-item w3-button">2022-</a> -->
         <a href="/exhibition/eros-as-a-modern-punishment.html" class="w3-bar-item w3-button">Eros, as a Modern Punishment</a>
         <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align" id="myBtn">
-        Artwork <i class="fa fa-caret-down"></i>
+        Artworks <i class="fa fa-caret-down"></i>
         </a>
         <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
         <!-- <a href="#" class="w3-bar-item w3-button w3-light-grey"><i class="fa fa-caret-right w3-margin-right"></i>Skinny</a> -->
@@ -30,11 +30,9 @@
         
         <!-- <a href="#" class="w3-bar-item w3-button">2022-</a> -->
         <div style="height:16px;"></div>
-
-        <a href="/biography.html" class="w3-bar-item w3-button">Biography</a>
-        <div style="height:16px;"></div>
         <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio</a>
         <div style="height:16px;"></div>
+        <a href="/biography.html" class="w3-bar-item w3-button">Biography</a>
         <a href="/contact.html" class="w3-bar-item w3-button">Contact</a>
      
     </div>
