--- a/exhibition/eros-as-a-modern-punishment.html
+++ b/exhibition/eros-as-a-modern-punishment.html
@@ -85,7 +85,7 @@
                     <td>Web</td>
                     <td>Design,
                         Min Kyung Lee.
-                        Developer,
+                        Web Developer,
                         Eunah Jung.
                         Transmission (Advice),
                         Seung Joon Lee.
