--- a/nav.html
+++ b/nav.html
@@ -30,7 +30,7 @@
         
         <!-- <a href="#" class="w3-bar-item w3-button">2022-</a> -->
         <div style="height:16px;"></div>
-        <a href="/studio/intro.html" class="w3-bar-item w3-button">Cultural Experimentation<br>(Art and Mass Media)</a>
+        <a href="/studio/intro.html" class="w3-bar-item w3-button">Transdisciplinary Studio</a>
         <div style="height:16px;"></div>
         <a href="/biography.html" class="w3-bar-item w3-button">Biography</a>
         <a href="/contact.html" class="w3-bar-item w3-button">Contact</a>
