--- a/studio/intro.html
+++ b/studio/intro.html
@@ -43,6 +43,14 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
+            I have integrated art and mass media to meet the society's needs -- political, functional.<br>
+            <br>
+            </p>
+    </div>
+        
+    <div class="w3-container text">
+        <div style="height:45.5px;"> </div>   
+        <p>
             Art Direction for Metaverse Web/App <i>Social Walk</i><br>
             Commissioned by Social Decanting<br>
             2023</p>
