--- a/studio/intro.html
+++ b/studio/intro.html
@@ -22,8 +22,8 @@
 <body class="w3-content" style="max-width:100vw">
 
     <!-- Sidebar/menu -->
-    <div id="nav-placeholder"></div>
-    <div id="nav-void"></div>
+<!--     <div id="nav-placeholder"></div>
+    <div id="nav-void"></div> -->
 
     <!-- Overlay effect when opening sidebar on small screens -->
     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
@@ -43,7 +43,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            I have integrated art and mass media to meet the society's needs -- political, functional.<br>
+            I have integrated art and mass media, in which art meets the society's needs -- political, functional.<br>
             <br>
             </p>
     </div>
