--- a/studio/intro.html
+++ b/studio/intro.html
@@ -26,10 +26,10 @@
     <div id="nav-void"></div> -->
 
     <!-- Overlay effect when opening sidebar on small screens -->
-    <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<!--     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
 
     <!-- !PAGE CONTENT! -->
-    <div class="w3-main" style="margin-left:250px">
+    <div class="w3-main" style="margin-left:10px">
 
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
