--- a/studio/intro.html
+++ b/studio/intro.html
@@ -70,15 +70,15 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Art Direction for Metaverse Web <i>#RelightKorea</i><br>
+            Art Direction for Web <i>#RelightKorea</i><br>
             Created by #RelightKorea team<br>
-            2023</p>
+            2016</p>
     </div>
     <!-- Image header -->
     <div class="w3-display-container w3-container">
        
-            <div style="position:relative; width:70%"><img src="/images/social_walk.png" alt="social_walk" style="width:100%">
-            <span class="font-12" style="position:absolute; bottom:0; right:-103px; vertical-align: bottom; padding-bottom:5.5px; padding-left: 3.5px;">© Social Decanting</span>
+            <div style="position:relative; width:70%"><img src="/images/RelightKorea(web)_2016.mp4" alt="relightkorea" style="width:100%">
+            <span class="font-12" style="position:absolute; bottom:0; right:-103px; vertical-align: bottom; padding-bottom:5.5px; padding-left: 3.5px;"></span>
         </div>
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
