--- a/studio/intro.html
+++ b/studio/intro.html
@@ -43,7 +43,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            I have integrated art and mass media, in which art meets the society's needs —— political, functional.<br>
+            I have integrated art and mass media, in which art meets the society's needs — political, functional.<br>
             <br>
             </p>
     </div>
