--- a/studio/intro.html
+++ b/studio/intro.html
@@ -78,7 +78,7 @@
     <div class="w3-display-container w3-container">
        
             <div style="position:relative; width:70%">
-                <video width="100vw" controls>
+                <video width="540" height="360" controls>
                   <source src="/images/RelightKorea(web)_2016.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
