--- a/studio/intro.html
+++ b/studio/intro.html
@@ -22,8 +22,8 @@
 <body class="w3-content" style="max-width:100vw">
 
     <!-- Sidebar/menu -->
-<!--     <div id="nav-placeholder"></div>
-    <div id="nav-void"></div> -->
+    <div id="s-nav-placeholder"></div>
+    <div id="s-nav-void"></div>
 
     <!-- Overlay effect when opening sidebar on small screens -->
 <!--     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
