--- a/studio/intro.html
+++ b/studio/intro.html
@@ -70,8 +70,10 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Art Direction for Web <i>#RelightKorea</i><br>
-            Created by #RelightKorea team<br>
+            Ideation for <i>#RelightKorea</i><br>
+            Data Visualization and Interactive Web Contents<br>
+            Created by #RelightKorea Team<br>
+            Produced by Dami Kim and Eunah Jung<br>
             2016</p>
     </div>
     <!-- Image header -->
