--- a/studio/intro.html
+++ b/studio/intro.html
@@ -51,7 +51,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Art Direction for Metaverse Web/App <i>Social Walk</i><br>
+            Art and UX Design of Metaverse Web/App <i>Social Walk</i><br>
             Commissioned by Social Decanting<br>
             2023</p>
     </div>
@@ -70,7 +70,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Ideation for <i>#RelightKorea</i><br>
+            Concept Development of Web <i>#RelightKorea</i><br>
             Data Visualization and Interactive Web Contents<br>
             Created by #RelightKorea Team<br>
             Produced by Dami Kim and Eunah Jung<br>
