--- a/s-nav.html
+++ b/s-nav.html
@@ -1,4 +1,4 @@
-<nav style="z-index:3;width:250px;margin-left:auto;margin-right:0;" class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" id="mySidebar">
+<nav style="z-index:3;width:250px;margin-left:-webkit-calc(100vw - 250px);margin-right:0;" class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" id="mySidebar">
     <div class="w3-container w3-display-container w3-padding-16" style="padding-top:9.5px!important;">
         <i onclick="w3_close()" id="close" class="w3-display-topright">
             <div class="change-bar1"></div>
