--- a/studio/intro.html
+++ b/studio/intro.html
@@ -70,8 +70,9 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Concept Development of Web <i>#RelightKorea</i><br>
-            Produced by Dami Kim and Eunah Jung<br>
+            Concept Development of Digial Activism <i>#RelightKorea</i><br>
+            Created by Artist, Designer, Web Developers from KAIST<br>
+            Produced by Dami Kim, Eunah Jung<br>
             2016</p>
     </div>
     <!-- Image header -->
