--- a/studio/intro.html
+++ b/studio/intro.html
@@ -51,7 +51,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Art and UX Design of Metaverse Web/App <i>Social Walk</i><br>
+            UX Design of Metaverse Web/App <i>Social Walk</i><br>
             Commissioned by Social Decanting<br>
             2023</p>
     </div>
