--- a/studio/intro.html
+++ b/studio/intro.html
@@ -70,7 +70,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            Concept Development of Digial Activism <i>#RelightKorea</i><br>
+            Concept Development of Digital Activism <i>#RelightKorea</i><br>
             Created by Artist, Designer, Web Developers from KAIST<br>
             Produced by Dami Kim, Eunah Jung<br>
             2016</p>
