--- a/studio/intro.html
+++ b/studio/intro.html
@@ -32,7 +32,7 @@
     <div class="w3-main" style="margin-left:0px; margin-right:250px;">
 
     <!-- Push down content on small screens -->
-    <div class="w3-hide-large" style="margin-top:83px"></div>
+<!--     <div class="w3-hide-large" style="margin-top:83px"></div> -->
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
