--- a/s-nav.html
+++ b/s-nav.html
@@ -1,13 +1,14 @@
 <nav style="z-index:3;width:250px;margin-left:-webkit-calc(100vw - 250px);margin-right:0;" class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" id="mySidebar">
     <div class="w3-container w3-display-container w3-padding-16" style="padding-top:9.5px!important;">
         <i onclick="w3_close()" id="close" class="w3-display-topright">
-            <div class="change-bar1"></div>
+<!--             <div class="change-bar1"></div>
             <div class="change-bar2"></div>
-            <div class="change-bar3"></div>
+            <div class="change-bar3"></div> -->
+            More
         </i>
 <!--         <h3 class="w3-wide"><a href="/index.html">Dami Kim</a></h3> -->
     </div>
-    <div class="w3-padding-64 w3-large" style="margin-top:18px;">
+    <div class="w3-padding-64 w3-large" style="font-size:13.5px;line-height: 1.2;margin-top:18px;">
        
     <p><b>Related Experience</b><br>
         Fine Art Practice
