--- a/s-nav.html
+++ b/s-nav.html
@@ -11,7 +11,7 @@
     <div class="w3-padding-64 w3-large" style="font-size:13.5px;line-height: 1.2;margin-top:18px;">
        
     <p><b>Related Experience</b><br>
-        Fine Art Practice
+        Fine Art Practice<br>
         <br>
         Researcher Intern, VIRNECT<br>
         AR/VR Technology Startup<br>
