--- a/s-nav.html
+++ b/s-nav.html
@@ -1,11 +1,11 @@
 <nav style="z-index:3;width:250px;margin-left:-webkit-calc(100vw - 250px);margin-right:0;" class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" id="mySidebar">
     <div class="w3-container w3-display-container w3-padding-16" style="padding-top:9.5px!important;">
-        <div onclick="w3_close()" id="close" class="w3-display-topright">
-<!--        <div class="change-bar1"></div>
+        <i onclick="w3_close()" id="close" class="w3-display-topright">
+            <div class="change-bar1"></div>
             <div class="change-bar2"></div>
-            <div class="change-bar3"></div> -->
+            <div class="change-bar3"></div>
             More
-        </div>
+        </i>
 <!--         <h3 class="w3-wide"><a href="/index.html">Dami Kim</a></h3> -->
     </div>
     <div class="w3-padding-64 w3-large" style="font-size:13.5px;line-height: 1.2;margin-top:18px;">
@@ -33,8 +33,9 @@
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
 <!--     <div class="w3-bar-item w3-padding-24 w3-wide"><a href="/index.html">Dami Kim</a></div> -->
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right" onclick="w3_open();">    
-        <div class="bar1"></div>
+<!--         <div class="bar1"></div>
         <div class="bar2"></div>
-        <div class="bar3"></div></a>
+        <div class="bar3"></div>-->
+    More </a> 
     </header>
 
