--- a/biography.html
+++ b/biography.html
@@ -41,7 +41,7 @@
     </header>
 
     <div id="content-biography" style="font-size:13.5px;"> 
-        <p style="color:rgb(139, 139, 139); font-size:12px;">Last updated August 2023</p>
+        <p style="color:rgb(139, 139, 139); font-size:12px;">Last updated November 2023</p>
     <br><br>
   <table id="bio-list">
     <tr>
@@ -80,8 +80,12 @@
   <table id="bio-list">
     <tr><strong>Exhibition/Performance</strong></tr>
     <tr>
+      <td style="width: 8vw;">2023</td>
+      <td>Group Exhibition <i>under the surface</i> — Horanggasy Creative Studio, Gwangju, South Korea</td>
+    </tr>
+    <tr>
       <td style="width: 8vw;">2021</td>
-      <td>Solo Exhibition <i>Eros, as a Modern Punishment</i> — www.moderneros.live & Geumnarae Art Hall et al, Web-South Korea Connect</td>
+      <td>Self-organized Solo Exhibition <i>Eros, as a Modern Punishment</i> — www.moderneros.live & Geumnarae Art Hall et al, Web-South Korea Connect</td>
     </tr>
     <tr>
       <td></td>
@@ -110,11 +114,11 @@
   <br>
   <table id="bio-list">
     <tr><strong>Commission/Residency</strong></tr>
-    <tr>
+<!--     <tr>
       <td style="width: 8vw;">2023</td>
       <td>Metaverse Web/App <i>Social Walk</i> — Social Decanting, Seoul, South Korea
       </td>
-    </tr>
+    </tr> -->
       <tr>
         <td style="width: 8vw;">2021</td>
         <td>Residency — Horanggasy Creative Studio, Gwangju, South Korea
