--- a/studio/intro.html
+++ b/studio/intro.html
@@ -70,7 +70,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            UX Design of Digital Activism Web <i>#RelightKorea</i><br>
+            Art Direction of Digital Activism Web <i>#RelightKorea</i><br>
             Created by Artist, Designer, Web Developers from KAIST<br>
             2016</p>
     </div>
