--- a/biography.html
+++ b/biography.html
@@ -113,17 +113,17 @@
   <br>
   <br>
   <table id="bio-list">
-    <tr><strong>Commission/Residency</strong></tr>
+    <tr><strong>Commission</strong></tr>
 <!--     <tr>
       <td style="width: 8vw;">2023</td>
       <td>Metaverse Web/App <i>Social Walk</i> — Social Decanting, Seoul, South Korea
       </td>
     </tr> -->
-      <tr>
+<!--       <tr>
         <td style="width: 8vw;">2021</td>
         <td>Residency — Horanggasy Creative Studio, Gwangju, South Korea
         </td>
-      </tr>
+      </tr> -->
       <tr>
         <td></td>
         <td>Group Live Performance <i>MOVE! MOVE! MOVE! Largo</i> — Indi Art-hall Gong, Seoul, South Korea</td>
