--- a/studio/intro.html
+++ b/studio/intro.html
@@ -43,7 +43,7 @@
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
-            I have integrated art and mass media, through which art can make an impact on Korean society. It is political or functional.<br>
+            I have integrated art and mass media, in which art meets Korean society's needs — political, functional.<br>
             <br>
             </p>
     </div>
