--- a/studio/intro.html
+++ b/studio/intro.html
@@ -40,13 +40,13 @@
         <!-- <p class="w3-right"></p> -->
     </header>
 
-    <div class="w3-container text">
+<!--     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
         <p>
             I have integrated art and mass media, in which art meets Korean society's needs — political, functional.<br>
             <br>
             </p>
-    </div>
+    </div> -->
         
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
