--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -53,10 +53,18 @@
                 <img src="/images/jpg/5.jpeg" style="width:100%; margin-bottom:5px;">
                 <img src="/images/jpg/6.jpeg" style="width:100%; margin-bottom:5px;">
                 <img src="/images/jpg/7.jpeg" style="width:100%; margin-bottom:5px;">
-      
-
-
-
+                <img src="/images/jpg/8.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/9.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/10.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/11.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/12.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/13.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/14.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/15.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/16.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/17.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/18.jpeg" style="width:100%; margin-bottom:5px;">
+                <img src="/images/jpg/19.jpeg" style="width:100%; margin-bottom:5px;">
             </div>
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
