--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -36,15 +36,22 @@
         <!-- <p class="w3-right"></p> -->
     </header>
 
-<!--     <div class="w3-container text">
+    <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
-        <p>
+        <p>선 1 (2018-9)은 낯선 이와
+제가 선 위에서 처음 만나는
+해프닝입니다.
+이 사진들 각각은 낯선 이가
+저를 향해 걷기 시작한 뒤 처
+음으로 멈춘 순간을 보입니다.
+            <br><br>
+            2021. 11. 13
+광주, 호랑가시 아트폴리곤
             </p>
-    </div> -->
+    </div>
         
     <!-- Image header -->
     <div class="w3-display-container w3-container">
-       
             <div style="position:relative; width:100%">
                 <img src="/images/jpg/1.jpeg" style="width:100%; margin-bottom:5px;">
                 <img src="/images/jpg/2.jpeg" style="width:100%; margin-bottom:5px;">
