--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -32,20 +32,19 @@
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <!-- <p class="w3-left">Desire and Deception (2019)</p> -->
+        <p class="w3-left">선 (2019초연)</p>
         <!-- <p class="w3-right"></p> -->
     </header>
 
     <div class="w3-container text">
         <div style="height:45.5px;"> </div>   
-        <p>선 1 (2018-9)은 낯선 이와
+        <p>'선'은 낯선 이와
 제가 선 위에서 처음 만나는
-해프닝입니다.
-이 사진들 각각은 낯선 이가
+해프닝입니다. 이 사진들 각각은 낯선 이가
 저를 향해 걷기 시작한 뒤 처
 음으로 멈춘 순간을 보입니다.
             <br><br>
-            2021. 11. 13
+            2021. 11. 13<br>
 광주, 호랑가시 아트폴리곤
             </p>
     </div>
