--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -52,25 +52,25 @@
     <!-- Image header -->
     <div class="w3-display-container w3-container">
             <div style="position:relative; width:100%">
-                <img src="/images/jpg/1.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/2.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/3.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/4.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/5.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/6.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/7.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/8.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/9.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/10.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/11.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/12.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/13.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/14.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/15.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/16.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/17.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/18.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/jpg/19.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/1.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/2.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/3.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/4.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/5.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/6.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/7.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/8.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/9.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/10.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/11.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/12.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/13.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/14.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/15.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/16.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/17.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/18.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/19.jpeg" style="width:100%; margin-bottom:30px;">
             </div>
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
