--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -13,10 +13,12 @@
     gtag('config', 'G-7HWWNGB65K');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Noto+Serif+KR&display=swap" rel="stylesheet">
     <link id="pagestyle" rel="stylesheet" href="/stylesheet.css">
 <style>
     .w3-sidebar,.w3-wide a {font-family: "Times New Roman", serif; font-weight: normal; text-decoration: none;}
     body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", serif; }
+    .text {font-family: 'Noto Serif KR', serif;}
 </style>
 </head>
 <body class="w3-content" style="max-width:100vw">
@@ -52,9 +54,9 @@
     <!-- Image header -->
     <div class="w3-display-container w3-container">
             <div style="position:relative; width:100%">
-                <img src="/images/line-photo/1.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/2.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/3.jpeg" style="width:100%; margin-bottom:30px;">
+                <img src="/images/line-photo/1.jpeg" style="width:100%; margin-bottom:90px;">
+                <img src="/images/line-photo/2.jpeg" style="width:100%; margin-bottom:90px;">
+                <img src="/images/line-photo/3.jpeg" style="width:100%; margin-bottom:90px;">
                 <img src="/images/line-photo/4.jpeg" style="width:100%; margin-bottom:30px;">
                 <img src="/images/line-photo/5.jpeg" style="width:100%; margin-bottom:30px;">
                 <img src="/images/line-photo/6.jpeg" style="width:100%; margin-bottom:30px;">
