--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -34,7 +34,7 @@
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p class="w3-left">선 (2019초연)</p>
+        <p class="w3-left text">선 (2019초연)</p>
         <!-- <p class="w3-right"></p> -->
     </header>
 
