--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -19,6 +19,7 @@
     .w3-sidebar,.w3-wide a {font-family: "Times New Roman", serif; font-weight: normal; text-decoration: none;}
     body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", serif; }
     .text {font-family: 'Noto Serif KR', serif;}
+    #line-photo {margin-bottom:60px;}
 </style>
 </head>
 <body class="w3-content" style="max-width:100vw">
@@ -54,25 +55,25 @@
     <!-- Image header -->
     <div class="w3-display-container w3-container">
             <div style="position:relative; width:100%">
-                <img src="/images/line-photo/1.jpeg" style="width:100%; margin-bottom:90px;">
-                <img src="/images/line-photo/2.jpeg" style="width:100%; margin-bottom:90px;">
-                <img src="/images/line-photo/3.jpeg" style="width:100%; margin-bottom:90px;">
-                <img src="/images/line-photo/4.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/5.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/6.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/7.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/8.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/9.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/10.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/11.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/12.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/13.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/14.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/15.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/16.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/17.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/18.jpeg" style="width:100%; margin-bottom:30px;">
-                <img src="/images/line-photo/19.jpeg" style="width:100%; margin-bottom:30px;">
+                <img id="line-photo" src="/images/line-photo/1.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/2.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/3.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/4.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/5.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/6.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/7.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/8.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/9.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/10.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/11.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/12.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/13.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/14.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/15.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/16.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/17.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/18.jpeg" style="width:100%; ">
+                <img id="line-photo" src="/images/line-photo/19.jpeg" style="width:100%; ">
             </div>
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
     
