--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="w3-container text">
-        <div style="height:45.5px;"> </div>   
+        <div style="height:45.5px; margin-bottom:30px;"> </div>   
         <p>'선'은 낯선 이와
 제가 선 위에서 처음 만나는
 해프닝입니다. 이 사진들 각각은 낯선 이가
