--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -35,12 +35,12 @@
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p class="w3-left text">선 (2019초연)</p>
-        <!-- <p class="w3-right"></p> -->
+        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;>선 (2019초연)</p>
+        <!-- <p class="w3-right"></p> --> 
     </header>
 
     <div class="w3-container text">
-        <div style="height:45.5px; margin-bottom:30px;"> </div>   
+        <div style="height:30px; margin-bottom:30px;"> </div>   
         <p>'선'은 낯선 이와
 제가 선 위에서 처음 만나는
 해프닝입니다. 이 사진들 각각은 낯선 이가
