--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -39,8 +39,8 @@
         <!-- <p class="w3-right"></p> --> 
     </header>
 
-    <div class="w3-container text">
-        <div style="height:30px; margin-bottom:30px;"> </div>   
+    <div class="w3-container text" style="margin-bottom:30px;">
+        <div style="height:30px;"> </div>   
         <p>'선'은 낯선 이와
 제가 선 위에서 처음 만나는
 해프닝입니다. 이 사진들 각각은 낯선 이가
