--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -31,7 +31,7 @@
     <div class="w3-main" style="margin-left:0px; margin-right:250px;">
 
     <!-- Push down content on small screens -->
-    <div class="w3-hide-large" style="margin-top:43px"></div>
+<!--     <div class="w3-hide-large" style="margin-top:43px"></div> -->
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
