--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -41,9 +41,11 @@
 
     <div class="w3-container text" style="margin-bottom:30px;">
         <div style="height:30px;"> </div>   
-        <p>'선'은 낯선 이와
+        <p>
+<!--             '선'은 낯선 이와
 제가 선 위에서 처음 만나는
-해프닝입니다. 이 사진들 각각은 낯선 이가
+해프닝입니다.  -->
+            이 사진들 각각은 낯선 이가
 저를 향해 걷기 시작한 뒤 처
 음으로 멈춘 순간을 보입니다.
             <br><br>
