--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -35,8 +35,7 @@
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;>선 (2019초연)</p>
-        <!-- <p class="w3-right"></p> --> 
+        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;">선 (2019초연)</p>
     </header>
 
     <div class="w3-container text" style="margin-bottom:30px;">
