--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -18,7 +18,7 @@
 <style>
     .w3-sidebar,.w3-wide a {font-family: "Times New Roman", serif; font-weight: normal; text-decoration: none;}
     body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", serif; }
-    .text {font-family: 'Noto Serif KR', serif; line-height: 2;}
+    .text {font-family: 'Noto Serif KR', serif; line-height:1.5;}
     #line-photo {margin-bottom:60px;}
 </style>
 </head>
@@ -34,9 +34,9 @@
 <!--     <div class="w3-hide-large" style="margin-top:43px"></div> -->
     
     <!-- Top header -->
-    <header class="w3-container w3-xlarge" style="font-family:'Noto Serif KR', serif; font-size:18px;">
-        <p class="w3-left">선 (2019초연)</p>
-    </header>
+<!--     <header class="w3-container w3-xlarge" > -->
+        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;">선 (2019초연)</p>
+<!--     </header> -->
 
     <div class="w3-container text" style="margin-bottom:35px;">
         <div style="height:8px;"> </div>   
