--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -34,9 +34,9 @@
 <!--     <div class="w3-hide-large" style="margin-top:43px"></div> -->
     
     <!-- Top header -->
-<!--     <header class="w3-container w3-xlarge" > -->
+    <header class="w3-container w3-xlarge" >
         <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;">선 (2019초연)</p>
-<!--     </header> -->
+    </header>
 
     <div class="w3-container text" style="margin-bottom:35px;">
         <div style="height:8px;"> </div>   
