--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dami Kim, Line, 2021. Eros, as a Modern Punishment.</title></title>
+    <title>Dami Kim, Line, 2021. Eros, as a Modern Punishment.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Global site tag (gtag.js) - Google Analytics -->
