--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -17,7 +17,7 @@
     <link id="pagestyle" rel="stylesheet" href="/stylesheet.css">
 <style>
     .w3-sidebar,.w3-wide a {font-family: "Times New Roman", serif; font-weight: normal; text-decoration: none;}
-    body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", serif; }
+/*     body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", serif; } */
     .text {font-family: 'Noto Serif KR', serif; line-height:1.5;}
     #line-photo {margin-bottom:60px;}
 </style>
