--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -13,6 +13,8 @@
     gtag('config', 'G-7HWWNGB65K');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Noto+Serif+KR&display=swap" rel="stylesheet">
     <link id="pagestyle" rel="stylesheet" href="/stylesheet.css">
 <style>
