--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -37,10 +37,11 @@
     
     <!-- Top header -->
     <header class="w3-container w3-xlarge" >
-        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;">선 (2019초연)</p>
+        <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;"></p>
     </header>
 
     <div class="w3-container text" style="margin-bottom:40px;">
+        <p>선 (2019초연)<br></p>
         <div style="height:8px;"> </div>   
         <p>
 <!--             '선'은 낯선 이와
