--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -36,12 +36,12 @@
 <!--     <div class="w3-hide-large" style="margin-top:43px"></div> -->
     
     <!-- Top header -->
-    <header class="w3-container w3-xlarge" >
+<!--     <header class="w3-container w3-xlarge" >
         <p class="w3-left" style="font-family:'Noto Serif KR', serif; font-size:18px;"></p>
-    </header>
+    </header> -->
 
     <div class="w3-container text" style="margin-bottom:40px;">
-        <p>선 (2019초연)<br></p>
+        <p style="font-size:18px;">선 (2019초연)<br></p>
         <div style="height:8px;"> </div>   
         <p>
 <!--             '선'은 낯선 이와
