--- a/exhibition/line-photo.html
+++ b/exhibition/line-photo.html
@@ -50,8 +50,8 @@
             이 사진들 각각은 낯선 이가
 저를 향해 걷기 시작한 뒤<br> 처음으로 멈춘 순간을 보입니다.
             <br><br>
-            2021. 11. 13<br>
-광주, 호랑가시 아트폴리곤
+            <p style="font-size:11px;">2021. 11. 13<br>
+광주, 호랑가시 아트폴리곤</p
             </p>
     </div>
         
