--- a/exhibitions.html
+++ b/exhibitions.html
@@ -30,7 +30,7 @@
                 <div>
                     <div class="coloum-2-cover">
                         <div class="w3-container">
-                            <img src="/images/eros/square_act3 복사본 2.gif" style="width:100%; padding-bottom:6px;">
+                            <img src="/images/eros/eros_poster.gif" style="width:100%; padding-bottom:6px;">
                             <p class="work-title">Eros, as a Modern Punishment 
                                 <br><span id="detail">2021, www.moderneros.live and Geumnarae Art Hall et al</span></p>
                         </div>
