--- a/exhibition/quand-le-chat.html
+++ b/exhibition/quand-le-chat.html
@@ -56,7 +56,7 @@
                <br>
              
                 <img class="scale-49" src="/images/quand-le-chat/@@@Exposition_Ducos-Kim-Yuan Mathilde Ramon (2).jpg" alt="crous" style="margin-bottom:3px;">
-               <img class="scale-49"  src="/images/quand-le-chat/@@Exposition_Ducos-Kim-Yuan Mathilde Ramon (5) 복사본.jpg" alt="crous" style="margin-bottom:3px;">
+               <img class="scale-49"  src="/images/quand-le-chat/@@Exposition_Ducos-Kim-Yuan Mathilde Ramon (5) edit.jpg" alt="crous" style="margin-bottom:3px;">
         
                <img class="scale-49" src="/images/quand-le-chat/Line video .jpg" alt="crous" style="margin-bottom:49px;">
                <br>
