--- a/exhibition/eros-as-a-modern-punishment.html
+++ b/exhibition/eros-as-a-modern-punishment.html
@@ -43,7 +43,7 @@
             <p class="artwork-image-caption" style="margin-top:7px;">In front of the mirror, 2021 re-performed (2018 created)<br>Seoul, South Korea</p>
             <br>
               <video width="100%" height="auto" controls autoplay>
-                <source src="/images/self_clip.mov" type="video/mov">
+                <source src="/images/self_clip.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <p class="artwork-image-caption" style="margin-top:3px;">Self (recreate), 2021<br>Busan, South Korea</p>
@@ -52,7 +52,7 @@
             <img class="eros-line" src="/images/eros/line_space.jpg" alt="line" style="margin-bottom:-1px;">
             <img class="eros-line" src="/images/eros/line.jpg" alt="line" style="margin-bottom:0px; margin-top:15px;">
             <video class="eros-line" width="69%" height="auto" controls style="margin-top:15px;">
-              <source src="/images/eros/line_clip.mov" type="video/mov">
+              <source src="/images/eros/line_clip.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
             <p class="eros-line artwork-image-caption" style="margin-top:3px;">Line, 2021 re-performed (2018-9 created)<br>Gwangju, South Korea</p>
