--- a/writing/line.html
+++ b/writing/line.html
@@ -23,11 +23,11 @@
     <div class="w3-hide-large" style="margin-top:83px"></div>
     
     <!-- Top header -->
-    <header class="w3-container w3-xlarge" style="margin-left:-16px;">
+    <header class="w3-container w3-xlarge">
         <p class="w3-left">Line, 2019</p>
         <p class="w3-right"></p>
     </header>
-
+ <div class="w3-display-container w3-container">
     <img class="scale-85" src="/images/filippo.png">
    
     <br><br>
@@ -43,7 +43,7 @@
               </tr>
  
           </table>
-
+ </div>
     </div>
 
     <script src="/js/jquery-3.5.1.min.js"></script>
