--- a/exhibition/eros-as-a-modern-punishment.html
+++ b/exhibition/eros-as-a-modern-punishment.html
@@ -52,7 +52,7 @@
             <img class="eros-line" src="/images/eros/line_space.jpg" alt="line" style="margin-bottom:-1px;">
             <img class="eros-line" src="/images/eros/line.jpg" alt="line" style="margin-bottom:0px; margin-top:15px;">
             <video class="eros-line" width="69%" height="auto" controls style="margin-top:15px;">
-              <source src="/images/line_2021.mp4" type="video/mp4">
+              <source src="/images/eros/line_clip.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
             <p class="eros-line artwork-image-caption" style="margin-top:3px;">Line, 2021 re-performed (2018-9 created)<br>Gwangju, South Korea</p>
