--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         <h3 class="w3-wide"><a href="/index.html">Dami Kim</a></h3>
     </div>
     <div class="w3-padding-64 w3-large" style="margin-top:8px;color: rgb(73,73,73); line-height:1.3;">
-        <a href="#" class="w3-bar-item w3-button" style="font-family:'Times New Roman', serif;font-size:15px;">vulnerable</a>
+        <a href="#" class="w3-bar-item w3-button">vulnerable</a>
         <div style="height:16.5px;"></div>
         
         <!-- <a href="#" class="w3-bar-item w3-button">2022-</a> -->
