--- a/exhibitions.html
+++ b/exhibitions.html
@@ -50,7 +50,7 @@
             <div>
                 <div class="coloum-2-cover">
                     <div class="w3-container">
-                        <img src="/images/eros/eros_poster 복사본.gif" style="width:100%; padding-bottom:6px;">
+                        <img src="/images/eros/eros_poster1.gif" style="width:100%; padding-bottom:6px;">
                         <p class="work-title">Eros, as a Modern Punishment 
                             <br><span id="detail">2021, www.moderneros.live and Geumnarae Art Hall et al</span></p>
                     </div>
