--- a/studio.html
+++ b/studio.html
@@ -44,7 +44,7 @@
         </div>
         <!-- <div class="inner" style="background-color: rgba(194, 156, 125, 0.835); width:100%;">
         </div> -->
-        <div class="inner" style="background-color: rgba(71, 71, 71, 0.212); width:100%;">
+        <div class="inner layer" style="width:100%;">
         </div>
         <div class="inner">
             <h1 style="color:black; line-height:1.2; margin-bottom:64px;"> 
@@ -232,7 +232,7 @@
 </p>
 <br><br>
 <p>Send a comment<br>dami7060@gmail.com</p>
-<br><br><br><br>
+<br><br><br>
 </div>
 
 </div>
