--- a/studio.html
+++ b/studio.html
@@ -39,7 +39,7 @@
 
     <div class="outer">
         <div class="inner" style="background-color:antiquewhite;">
-            <img class="hero-image-desktop" src="/images/studio/hero002.png" style="opacity:100%;">
+            <img class="hero-image-desktop" src="/images/studio/hero002.png" style="opacity:100%; overflow-x:hidden;">
             <img class="hero-image-mobile" src="/images/studio/IMG_7858 2.jpg" style="opacity:100%;">
         </div>
         <!-- <div class="inner" style="background-color: rgba(194, 156, 125, 0.835); width:100%;">
