--- a/studio.html
+++ b/studio.html
@@ -40,7 +40,7 @@
     <div class="outer">
         <div class="inner hero-desktop" style="background-color:antiquewhite; background-image: url('/images/studio/hero002.png'); background-size:cover;">
 <!--             <img class="hero-image-desktop" src="/images/studio/hero002.png" style="opacity:100%; max-width:100%;"> -->
-            <img class="hero-image-mobile" src="/images/studio/IMG_7858 2.jpg" style="opacity:100%;">
+<!--             <img class="hero-image-mobile" src="/images/studio/IMG_7858 2.jpg" style="opacity:100%;"> -->
         </div>
         <!-- <div class="inner" style="background-color: rgba(194, 156, 125, 0.835); width:100%;">
         </div> -->
