--- a/studio.html
+++ b/studio.html
@@ -212,7 +212,7 @@
     <div class='scroll-spacer'></div>
     <div class='video-wrap'>
       <video class="article-video" width="40%" height="auto" autoplay controls playsinline loop style="display:block; margin: 0 auto;">
-        <source src="/images/studio/vllo 11.MP4" type="video/mp4">
+        <source src="/images/studio/vllo11.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     </div>
