--- a/studio.html
+++ b/studio.html
@@ -211,7 +211,7 @@
   <br>
     <div class='scroll-spacer'></div>
     <div class='video-wrap'>
-      <video class="article-video" width="40%" height="auto" autoplay controls playsinline loop style="display:block; margin: 0 auto;">
+      <video class="article-video" width="40%" height="auto" preload="yes" autoplay controls playsinline loop style="display:block; margin: 0 auto;">
         <source src="/images/studio/vllo11.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
