--- a/studio.html
+++ b/studio.html
@@ -206,7 +206,7 @@
 
 <div class="sep-bar"></div> 
 <div class="footer" style="padding:14px 17px; font-size:15px;">
-    © 2024 Studio
+    © 2024 Dami Kim
 </div>
 
     <script src="/js/jquery-3.5.1.min.js"></script>
