--- a/studio.html
+++ b/studio.html
@@ -125,7 +125,7 @@
 
 <h3>2) Racial Color Matters</h3>  
     <p>
-    As e-skin is beyond the geographical borders, its colors are composed with racial colors. E-skin generates different beauty of skin colors while letting them non-hierarchic. This may be affected by my Asian background. Invading the scheme of black and white, yellow creates another dynamics. And, e-skin makes physical body colors more prominent. Skin is new beauty. 
+    As e-skin is beyond the geographical borders, its colors are composed with racial colors. The color of e-skin generates different beauty of skin colors while letting them non-hierarchic. This may be affected by my Asian background. Invading the scheme of black and white, yellow creates another dynamics. And, e-skin makes physical body colors more prominent. Skin is new beauty. 
 </p>
 <br>
 <div style="margin-left:auto; margin-right:auto; width:300px;">
