--- a/exhibition/eros-as-a-modern-punishment.html
+++ b/exhibition/eros-as-a-modern-punishment.html
@@ -49,9 +49,9 @@
               <p class="artwork-image-caption" style="margin-top:3px;">Self (recreate), 2021<br>Busan, South Korea</p>
             <br>
 
-            <img class="eros-line" src="/images/eros/line_space.jpg" alt="line" style="margin-bottom:-1px;">
+<!--             <img class="eros-line" src="/images/eros/line_space.jpg" alt="line" style="margin-bottom:-1px;"> -->
             <img class="eros-line" src="/images/eros/line.jpg" alt="line" style="margin-bottom:0px; margin-top:15px;">
-            <video class="eros-line" width="69%" height="auto" controls style="margin-top:15px;">
+            <video class="eros-line" width="69%" height="auto" controls style="margin-top:15px; display:inline; ">
               <source src="/images/eros/line_clip.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
