--- a/studio.html
+++ b/studio.html
@@ -11,12 +11,12 @@
     <meta property="og:image:height" content="627">
     <meta property="og:url" content="https://damikim.net/studio.html">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ8FLEQZM2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5J2D5R8614"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-7HWWNGB65K');
+    gtag('config', 'G-5J2D5R8614');
     </script>
     <link id="pagestyle" rel="stylesheet" href="/stylesheet.css">
     <!-- <link rel="stylesheet" href="https://use.typekit.net/awj7rwy.css"> -->
